--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Food Log</string>
+    <string name="add_log">Add Log</string>
+    <string name="inspect_logs">Inspect Logs</string>
 </resources>
